feat: add compatibility for java 8